--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -193,6 +193,18 @@ Some of the plugins/extensions have additional configuration that will need to d
 
 One plugin, Bounce Handler, also requires you to fill out the credentials for the bounce handler email account you need to set up to capture bounced emails. 
 
+=head2 WYSIWYG Editors
+
+Optionally, you may also configure the WYSIWYG editors that come bundled with Dada Mail. These WYSIWYG editors will allow you to author and edit your HTML Mailing List Messages right in your List Control Panel. 
+
+=head3 Support Files Directory
+
+The only thing that the Installer needs to install and configure the WYSIWYG editors, is a location to install them at. The installer will need this location in two forms, the B<Absolute Directory on where to place the support file directory> and the B<Corresponding URL> to that directory. 
+
+Unlike the C<.dada_files> directory, you want to be able to access this directory via your web browser, since the WYSIWYG editors are little web-based apps in their own right. The File Browser (KCFinder) allows you to upload images to use in your mailing list messages, and those images will also need to be publically accessable. 
+
+By default a I<pretty good guess> is made, to set both the server absolute path to your public HTML directory, as well as the corresponding URL to access this directory via a web browser. If the default location looks fine, keep it as-is. If you'd like to customize/fix where this directory lives, please do so. Under this directory, the Installer will make new directory called, C<dada_mail_support_files> and under this directory, install the WYSIWYG editors (C<ckeditor>, C<tiny_mce>, C<fckeditor>, the File Browser/Image Uploader (C<kcfinder>), as well as the directory that images/files are uploaded to, (C<file_uploads>. 
+
 =head2 Completing the Installation and Configuration. 
 
 Once you've filled out the form completely, just click the, B<Configure Dada Mail!> button. The screen will refresh and go about configuring Dada Mail for your hosting setup. 
